--- a/Resources/Resources.qrc
+++ b/Resources/Resources.qrc
@@ -1,32 +1,33 @@
 <RCC>
-  <qresource prefix="imgs">
-    <file>assets/workspace.png</file>
-    <file>assets/wiki.png</file>
-    <file>assets/tools.png</file>
-    <file>assets/team.png</file>
-    <file>assets/starter.png</file>
-    <file>assets/settings.png</file>
-    <file>assets/send.png</file>
-    <file>assets/rxreader.png</file>
-    <file>assets/postx.png</file>
-    <file>assets/out3rn3t_expl0rer.png</file>
-    <file>assets/online.png</file>
-    <file>assets/offline.png</file>
-    <file>assets/new_folder.png</file>
-    <file>assets/new_file.png</file>
-    <file>assets/mini.png</file>
-    <file>assets/menu.png</file>
-    <file>assets/max.png</file>
-    <file>assets/isae.png</file>
-    <file>assets/folder.png</file>
-    <file>assets/editor.png</file>
-    <file>assets/debugger.png</file>
-    <file>assets/dataflow.png</file>
-    <file>assets/console.png</file>
-    <file>assets/close.png</file>
-    <file>assets/close_dock.png</file>
-    <file>assets/binary.png</file>
-    <file>assets/bilibili.png</file>
-    <file>assets/apps.png</file>
-  </qresource>
+    <qresource prefix="/imgs">
+        <file>assets/workspace.png</file>
+        <file>assets/wiki.png</file>
+        <file>assets/tools.png</file>
+        <file>assets/team.png</file>
+        <file>assets/starter.png</file>
+        <file>assets/settings.png</file>
+        <file>assets/send.png</file>
+        <file>assets/rxreader.png</file>
+        <file>assets/postx.png</file>
+        <file>assets/out3rn3t_expl0rer.png</file>
+        <file>assets/online.png</file>
+        <file>assets/offline.png</file>
+        <file>assets/new_folder.png</file>
+        <file>assets/new_file.png</file>
+        <file>assets/mini.png</file>
+        <file>assets/menu.png</file>
+        <file>assets/max.png</file>
+        <file>assets/isae.png</file>
+        <file>assets/folder.png</file>
+        <file>assets/editor.png</file>
+        <file>assets/debugger.png</file>
+        <file>assets/dataflow.png</file>
+        <file>assets/console.png</file>
+        <file>assets/close.png</file>
+        <file>assets/close_dock.png</file>
+        <file>assets/binary.png</file>
+        <file>assets/bilibili.png</file>
+        <file>assets/apps.png</file>
+        <file>assets/smile.png</file>
+    </qresource>
 </RCC>
